<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>orocos_kdl_vendor</name>
  <version>0.5.1</version>
  <description>
    Wrapper around orocos_kdl, providing nothing but a dependency on orocos_kdl on some systems.
    On others, it fetches and builds orocos_kdl locally.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>LGPL-2.1-or-later</license>  <!-- orocos_kinematics_dynamics is LGPL 2.1 -->

  <url type="repository">https://github.com/orocos/orocos_kinematics_dynamics</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <!-- orocos_kdl depends on eigen -->
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>liborocos-kdl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
